# virtual-robot

./: README.md
ROS/Manutec_r2/gomtec_robot_description/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  package.xml  package.xml~  urdf.rviz
ROS/Manutec_r2/gomtec_robot_description/launch/: display.launch  display.launch~  display_p80_800.launch  display_p80_800_vision.launch
ROS/Manutec_r2/gomtec_robot_description/meshes/collision/: RGM1590_Joint900.STL  RGM1603_Joint1100.STL  RGM1631_Joint70.STL  RGM1631_Joint700.STL  RGM1650_Arm20.STL  RGM1656_Base.STL  RGM1680_Gripper.STL  RGM1690_Finger.STL  RGM1700_CameraGripper.STL  RGM1720_RoboCommander.STL
ROS/Manutec_r2/gomtec_robot_description/meshes/visual/: RGM1590_Joint90.STL  RGM1590_Joint900.STL  RGM1603_Joint110.STL  RGM1631_Joint700.STL  RGM1649_Arm1.STL  RGM1649_Arm101.STL  RGM1650_Arm2.STL  RGM1650_Arm20.STL  RGM1656_Base1.STL  RGM1680_Gripper.STL  RGM1690_Finger.STL  RGM1700_CameraGripper.STL  (+1 more)
ROS/Manutec_r2/gomtec_robot_description/src/: GelenkStellung.cpp  GelenkStellung.cpp~  startposition.cpp  startposition.cpp~
ROS/Manutec_r2/gomtec_robot_description/urdf/: Camera.xacro  Camera.xacro~  CameraGripper_macro.xacro  Gripper_macro.xacro  P80_800_macro.xacro  P80_800_macro.xacro~  Roberta_P80_800.urdf  Roberta_P80_800.urdf~  Roberta_P80_800.xacro  Roberta_P80_800.xacro~  Roberta_P80_800_Vision.urdf  Roberta_P80_800_Vision.urdf~  Roberta_P80_800_Vision.xacro  Roberta_P80_800_Vision.xacro~  RoboCommander_macro.xacro  kinect_camera.urdf.xacro  kinect_camera.urdf.xacro~  kinect_camera.xacro~
SPS/: Manutec.project  (+3 more)
(+17 files in other folders)
